# nlproto_native

./: .gitignore  CMakeLists.txt  CMakeLists_original.txt  Dockerfile  README.md  benchmark.cpp  benchmark1.cpp  build-single.sh  csv_json_writer.cpp  full_peppered_moths.xml  full_peppered_moths.yaml  main.cpp  pom.xml  run-headless.sh  run_netlogo.py  setup.sh  simple_test.yaml  test_simple.yaml
beginner_basic_sweep_results/: beginner_basic_sweep.csv
examples/: 01_beginner_basic_sweep.yaml  02_intermediate_multiple_params.yaml  03_advanced_high_resolution.yaml  04_performance_benchmark.yaml  05_parameter_specification_showcase.yaml  06_research_design_patterns.yaml  07_execution_modes_demo.yaml  08_performance_tuning_guide.md  09_ecology_predator_prey.yaml  10_social_segregation_schelling.yaml  11_economics_market_dynamics.yaml  12_epidemiology_disease_spread.yaml  13_output_analysis_guide.md  14_troubleshooting_guide.md  15_integration_workflows.md  16_user_personas_examples.md  README.md  example_commands.md
include/: async_writer.hpp  benchmark_types.hpp  circuit_breaker.hpp  config.hpp  expander.hpp  jni_bridge.h  jvm_manager.hpp  netlogo_command_builder.cpp  netlogo_command_builder.hpp  output_manager.hpp  results_ring.hpp  retry_policy.hpp  thread_pool_worker.hpp
models/: sample.nlogo
peppered_moths_optimized_results/: peppered_moths_optimized.csv
run_results/: run.csv
src/: RunAllTests.java  async_writer.cpp  benchmark1.cpp  config.cpp  config_parser.cpp  expander.cpp  jni_bridge.cpp  jvm_manager.cpp  output_manager.cpp  parameter_generator.cpp  results_ring.cpp  retry_policy.cpp  thread_pool_worker.cpp
src/nl/proto/: JobMeta.java  JobResult.java  NativeRuntime.java  NativeRuntime.java.txt  NetLogoRunner.java  NetLogoRunner.java.txt
